--- a/literacy/aboutmoney.html
+++ b/literacy/aboutmoney.html
@@ -19,6 +19,7 @@
 
 
 
+
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
         <header>
             <h1>Про деньги</h1>
             <div class="meta">
-                        <p> Обновлено: 2019-09-26 </p>
+                        <p> Обновлено: 2019-10-14 </p>
             </div>
         </header>
 
@@ -62,9 +63,8 @@
 <p>Другой важный нюанс — то, что деньги в процессе обмена не расходуются. Сапожник, получив от одного крестяника деньги за сапоги, отдаст их другому за зерно, тот второму сапожнику за свои сапоги, и так далее. На одну и ту же монету за время ярмарки будет куплено товаров на гораздо большую сумму, чем на монете выбито.</p>
 <p>А ещё деньги можно доставать из кубышек и складывать в них.</p>
 <p>Тогда, чтобы вновь обменять все сапоги на всё зерно, цены на нашей ярмарке должны удовлетворять следующему условию:</p>
-<p><span class="math">\($ P_B \cdot B + P_G \cdot G = V(M + \Delta S), $\)</span></p>
-<p>где <span class="math">\(P_B\)</span> и <span class="math">\(P_G\)</span> это цены сапог и зерна уже «в деньгах», <span class="math">\(M + \Delta S\)</span> — количество денег, которое у крестьян было «в обороте» + то, что достали из кубышек (или убрали в них, тогда <span class="math">\(\Delta S &lt; 0\)</span>), а <span class="math">\(V\)</span> — это сколько раз эти деньги за время ярмарки обернулись.</p>
-<script type="text/javascript"></script>
+<p>$$ P_B \cdot B + P_G \cdot G = V(M + \Delta S), $$</p>
+<p>где $P_B$ и $P_G$ это цены сапог и зерна уже «в деньгах», $M + \Delta S$ — количество денег, которое у крестьян было «в обороте» + то, что достали из кубышек (или убрали в них, тогда $\Delta S &lt; 0$), а $V$ — это сколько раз эти деньги за время ярмарки обернулись.</p>
         </div>
     </article>
 </div>
@@ -80,7 +80,6 @@
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-                <a href="/pages/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
     </div>
