--- a/literacy/money_inflation_wages.html
+++ b/literacy/money_inflation_wages.html
@@ -18,6 +18,20 @@
 <meta property="og:url" content="https://onfin.github.io/literacy/money_inflation_wages" />
 
 
+        <script>
+            MathJax = {
+                tex: {
+                    inlineMath: [['$', '$'], ['\\(', '\\)']],
+                    displayMath: [['$$', '$$'], ['\\[', '\\]']]
+                },
+                chtml: {
+                    scale: 1,
+                    matchFontHeight: false
+                }
+            };
+        </script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 
 </head>
 <body>
@@ -46,7 +60,7 @@
         <header>
             <h1>Деньги, инфляция и зарплаты</h1>
             <div class="meta">
-                        <p> Обновлено: 2019-10-08 </p>
+                        <p> Обновлено: 2019-10-14 </p>
             </div>
         </header>
 
@@ -69,12 +83,12 @@
 <h2 id="_2">Инфляция</h2>
 <p>Одно из главных обвинений против современных денег — то, что их можно неограниченно печатать, отчего возникаеет великая и ужасная <em>инфляция</em>. Поразбираемся в этом процессе.</p>
 <p>Начнём с одного из фундаментальных макроэкономических тождеств: уравнения обмена или уравнения Фишера:
-<span class="math">\($ Q \cdot P = M \cdot V, $\)</span>
-которое сообщает тривиальнейший факт: если продано <span class="math">\(Q\)</span> единиц товаров/услуг по средней цене <span class="math">\(P\)</span>, то при общей денежной массе <span class="math">\(M\)</span> каждая её единица сделала <span class="math">\(V\)</span> оборотов. По-другому не получится физически.</p>
+$$ Q \cdot P = M \cdot V, $$
+которое сообщает тривиальнейший факт: если продано $Q$ единиц товаров/услуг по средней цене $P$, то при общей денежной массе $M$ каждая её единица сделала $V$ оборотов. По-другому не получится физически.</p>
 <p>Уравнение это, конечно, смотрит на экономику с высоты даже не птичьего полёта, а просто из космоса. Чуть-чуть приблизим его к грешной земле, введя два «рынка»:
-<span class="math">\($ Q_1 \cdot P_1 + Q_2 \cdot P_2 = M \cdot V, $\)</span>
-и посмотрим что может случиться, если начать печатать деньги — т.е. увеличивать <span class="math">\(M\)</span>.</p>
-<p>Тождество должно соблюдаться, поэтому при увеличении <span class="math">\(M\)</span> в экономике может упасть скорость обращения денег <span class="math">\(V\)</span> (у людей и предприятий будут скапливаться запасы невостребованных денег), может увеличиться производство <span class="math">\(Q_1\)</span> или <span class="math">\(Q_2\)</span> (уменьшаются задержки оплаты у производителей), а могут и вырасти цены на любом из рынков <span class="math">\(P_1\)</span> или <span class="math">\(P_2\)</span>. На самом деле происходит всё это, только в разных пропорциях, и <em>инфляция</em> — рост цен — не единственно возможный процесс.</p>
+$$ Q_1 \cdot P_1 + Q_2 \cdot P_2 = M \cdot V, $$
+и посмотрим что может случиться, если начать печатать деньги — т.е. увеличивать $M$.</p>
+<p>Тождество должно соблюдаться, поэтому при увеличении $M$ в экономике может упасть скорость обращения денег $V$ (у людей и предприятий будут скапливаться запасы невостребованных денег), может увеличиться производство $Q_1$ или $Q_2$ (уменьшаются задержки оплаты у производителей), а могут и вырасти цены на любом из рынков $P_1$ или $P_2$. На самом деле происходит всё это, только в разных пропорциях, и <em>инфляция</em> — рост цен — не единственно возможный процесс.</p>
 <p>Но я не зря выделил в уравнении два разных рынка. Мы обычно воспринимаем как негативный рост цен лишь на одном рынке — потребительских товаров и услуг. Однако это не единственный рынок: соразмерны ему рынки рабочей силы (т.е. зарплата) и рынки капитала (акции, облигации, производные инструменты). Денежная масса может разогнать любой из них, почти не повлияв на потребительский рынок.</p>
 <p>Но далее мы будем смотреть именно на потребительский рынок, как наиболее близкий к нам.</p>
 <p>Цены на потребительском рынке растут не только (и, скорее, даже не столько) из-за роста денежной массы. Среди факторов роста цен можно выделить следующие:</p>
@@ -85,7 +99,6 @@
 <li>изменение конъюнктуры на мировых рынках (рост спроса на какое-то сырьё в одной стране, поднимет цену на него и производимые из него товары для всех);</li>
 <li>валютные курсы.</li>
 </ul>
-<script type="text/javascript"></script>
         </div>
     </article>
 </div>
@@ -101,7 +114,6 @@
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-                <a href="/pages/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
     </div>
