--- a/calculators/cards.html
+++ b/calculators/cards.html
@@ -17,9 +17,11 @@
     <meta property="og:description" content="Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт." />
 
     <meta property="og:type" content="article" />
-        <meta property="og:article:modified_time" content="2019-10-13" />
+        <meta property="og:article:published_time" content="2019-10-13" />
+        <meta property="og:article:modified_time" content="2019-10-14" />
 <meta property="og:title" content="Калькуляторы банковских карт" />
 <meta property="og:url" content="https://onfin.github.io/calculators/cards" />
+
 
 
 
@@ -51,7 +53,7 @@
             <h1>Калькуляторы банковских карт</h1>
             <div class="meta">
                     <p class="description">Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт.</p>
-                        <p> Обновлено: 2019-10-13 </p>
+                        <p> Обновлено: 2019-10-14 </p>
             </div>
         </header>
 
