--- a/calculators/credits.html
+++ b/calculators/credits.html
@@ -17,9 +17,11 @@
     <meta property="og:description" content="Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением." />
 
     <meta property="og:type" content="article" />
-        <meta property="og:article:modified_time" content="2019-10-13" />
+        <meta property="og:article:published_time" content="2019-10-13" />
+        <meta property="og:article:modified_time" content="2019-10-14" />
 <meta property="og:title" content="Калькуляторы кредитов" />
 <meta property="og:url" content="https://onfin.github.io/calculators/credits" />
+
 
 
 
@@ -51,7 +53,7 @@
             <h1>Калькуляторы кредитов</h1>
             <div class="meta">
                     <p class="description">Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением.</p>
-                        <p> Обновлено: 2019-10-13 </p>
+                        <p> Обновлено: 2019-10-14 </p>
             </div>
         </header>
 
