--- a/calculators/index.html
+++ b/calculators/index.html
@@ -17,9 +17,11 @@
     <meta property="og:description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
 
     <meta property="og:type" content="article" />
-        <meta property="og:article:modified_time" content="2019-10-13" />
+        <meta property="og:article:published_time" content="2019-10-13" />
+        <meta property="og:article:modified_time" content="2019-10-14" />
 <meta property="og:title" content="Калькуляторы" />
 <meta property="og:url" content="https://onfin.github.io/calculators" />
+
 
 
 
