--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -18,13 +18,24 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-19" />
-        <meta property="og:article:modified_time" content="2019-10-11" />
+        <meta property="og:article:modified_time" content="2019-10-14" />
 <meta property="og:title" content="Размещение средств в банках" />
 <meta property="og:url" content="https://onfin.github.io/literacy/deposits" />
 
 
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <script>
+            MathJax = {
+                tex: {
+                    inlineMath: [['$', '$'], ['\\(', '\\)']],
+                    displayMath: [['$$', '$$'], ['\\[', '\\]']]
+                },
+                chtml: {
+                    scale: 1,
+                    matchFontHeight: false
+                }
+            };
+        </script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 
 </head>
@@ -55,7 +66,7 @@
             <h1>Размещение средств в банках</h1>
             <div class="meta">
                     <p class="description">Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов.</p>
-                        <p> Обновлено: 2019-10-11 </p>
+                        <p> Обновлено: 2019-10-14 </p>
             </div>
         </header>
 
@@ -102,7 +113,7 @@
 
 <p>При выборе способа выплаты нужно руководствоваться следующими соображениями:</p>
 <ul>
-<li>Получение процентов в конце срока обычно выгоднее их капитализации (процентная ставка начисляется выше, чем в случае даже эффективной ставки с капитализацией). Как правило для вкладов с каптализацией банк приводит <em>эффективную процентную ставку</em> (т.е. приведённую к концу срока вклада). Если её нет, то рассчитывается она просто: <span class="math">\((1+r/N)^{N}-1\)</span>, где r — годовая процентная ставка (в единицах, т.е. ставка в процентах делённая на 100), а N — сколько раз за год начисляются проценты (например, если при номинальной годовой ставке
+<li>Получение процентов в конце срока обычно выгоднее их капитализации (процентная ставка начисляется выше, чем в случае даже эффективной ставки с капитализацией). Как правило для вкладов с каптализацией банк приводит <em>эффективную процентную ставку</em> (т.е. приведённую к концу срока вклада). Если её нет, то рассчитывается она просто: $(1+r/N)^{N}-1$, где r — годовая процентная ставка (в единицах, т.е. ставка в процентах делённая на 100), а N — сколько раз за год начисляются проценты (например, если при номинальной годовой ставке
 <input id="rate" type="number" value=6 step=0.5 style="width: 2em;" onChange="calcEffectiveRate()" />%г
 проценты начисляются
 <input id="periods" type="number" value=12 step=1 style="width: 2.5em;" onChange="calcEffectiveRate()" />раз,
@@ -117,7 +128,6 @@
 <h2 id="_4">Дебетовые карты</h2>
 <p>С практической точки зрения, дебетовая карта это аналог накопительного счёта, деньгами с которого можно сразу расплачиваться в торговых точках, и все рогатки накопительных счетов к ним применимы (а также и несколько собственных, описанных в статье о <a href="/literacy/moneytransfer#cards">денежных переводах</a>).</p>
 <p>Некоторые банки на остаток по своим дебетовкам начисляют весьма высокие проценты (иногда даже не выдвигая дополнительных требований, или делая их несущественными). Такие карты называют <em>доходными</em>, ими вполне можно пользоваться как обычным накопительным счётом, но для этого нужно снизить доступные лимиты на операции по карте до уровня текущих расходов (если они будут совершаться с этой карты).</p>
-<script type="text/javascript"></script>
         </div>
     </article>
 </div>
@@ -133,7 +143,6 @@
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-                <a href="/pages/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
                 <a href="/literacy/cards"> Банковские карты &gt;&gt; </a>
