--- a/literacy/index.html
+++ b/literacy/index.html
@@ -17,9 +17,11 @@
     <meta property="og:description" content="Заметки по финансовой грамотности в систематическом виде." />
 
     <meta property="og:type" content="article" />
-        <meta property="og:article:modified_time" content="2019-10-13" />
+        <meta property="og:article:published_time" content="2018-12-01" />
+        <meta property="og:article:modified_time" content="2019-10-14" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/literacy" />
+
 
 
 
