--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -18,13 +18,24 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-16" />
-        <meta property="og:article:modified_time" content="2019-10-11" />
+        <meta property="og:article:modified_time" content="2019-10-14" />
 <meta property="og:title" content="Введение" />
 <meta property="og:url" content="https://onfin.github.io/literacy/intro" />
 
 
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <script>
+            MathJax = {
+                tex: {
+                    inlineMath: [['$', '$'], ['\\(', '\\)']],
+                    displayMath: [['$$', '$$'], ['\\[', '\\]']]
+                },
+                chtml: {
+                    scale: 1,
+                    matchFontHeight: false
+                }
+            };
+        </script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 
 </head>
@@ -55,7 +66,7 @@
             <h1>Введение</h1>
             <div class="meta">
                     <p class="description">Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости.</p>
-                        <p> Обновлено: 2019-10-11 </p>
+                        <p> Обновлено: 2019-10-14 </p>
             </div>
         </header>
 
@@ -79,7 +90,7 @@
   }
 </script>
 
-<p>Вложенные под постоянную доходность деньги, если вложения не изымать, увеличиваются по формуле <em>сложного процента</em>: <span class="math">\(C \cdot r^N\)</span>, где <span class="math">\(C\)</span> — начальная сумма, <span class="math">\(r\)</span> — ставка доходности (во сколько раз увеличивается капитал за некоторый период, считается как 1 + &lt;доходность за период в процентах&gt;/100), <span class="math">\(N\)</span> — количество периодов, за которые начисляются проценты. Соответственно, когда мы начинаем изымать эти деньги, наш доход в месяц будет составлять <span class="math">\(C \cdot (r-1)/12\)</span> т.е. забираем только проценты, не проедая основной капитал.</p>
+<p>Вложенные под постоянную доходность деньги, если вложения не изымать, увеличиваются по формуле <em>сложного процента</em>: $C \cdot r^N$, где $C$ — начальная сумма, $r$ — ставка доходности (во сколько раз увеличивается капитал за некоторый период, считается как 1 + &lt;доходность за период в процентах&gt;/100), $N$ — количество периодов, за которые начисляются проценты. Соответственно, когда мы начинаем изымать эти деньги, наш доход в месяц будет составлять $C \cdot (r-1)/12$ т.е. забираем только проценты, не проедая основной капитал.</p>
 <p>Таким образом, единожды вложенные
 <input id="comp-capital" type="number" value=100000 step=1000 style="width: 4.5em;" onChange="calcCompounding()" />р
 за
@@ -101,7 +112,7 @@
   }
 </script>
 
-<p>Может быть вам пока не страшно. Но мы каждый день тратим деньги, и сколько-то из них тратим впустую. Регулярные вложения увеличиваются уже по формуле <em>геометрической прогрессии</em>: <span class="math">\(C \cdot \frac{1-r^N}{1-r}\)</span>. Пусть мы начинаем с нуля и каждый месяц откладываем
+<p>Может быть вам пока не страшно. Но мы каждый день тратим деньги, и сколько-то из них тратим впустую. Регулярные вложения увеличиваются уже по формуле <em>геометрической прогрессии</em>: $C \cdot \frac{1-r^N}{1-r}$. Пусть мы начинаем с нуля и каждый месяц откладываем
 <input id="contribution" type="number" value=10000 step=1000 style="width: 4.5em;" onChange="calcRegularContribution()" />р
 (в сегодняшних ценах, т.е. если деньги обесцениваются, то номинальную сумму увеличиваем), то за
 <input id="contr-period" type="number" value=40 step=1 style="width: 2em;" onChange="calcRegularContribution()" />лет
@@ -150,7 +161,6 @@
 <p>По умолчанию здесь установлена <em>норма сбережений</em> в 20% — то, что обычно рекомендуют в книгах и статьях по финансовой грамотности. С такой нормой вы, начав лет в 20, выйдете на собственную пенсию в аккурат к 60 годам. Но посмотрите, что стоит вам увеличить эту норму на 10%? Допустим, ваш доход 60Кр в месяц и 6Кр (200р в день) вы тратите на обеды в кафе, или такси до работы и обратно, или просто на утреннюю бодрящую чашку кофе по дороге. Как раз 10%. Эти 10% обходятся вам в <strong>семь</strong> лишних лет работы! Если вы недополучаете в год всего лишь 5% к своим расходам процентами и кэшбэком, из-за неумения пользоваться банковскими сервисами, — это ещё <strong>три</strong> года. А уйти на заслуженный отдых в 60 или в 50 лет — это очень большая разница.</p>
 <p>А если вы научитесь комфортно жить на <strong>треть</strong> своих трудовых доходов, то всего через 8 лет уже сможете послать работодателя к чертям и заниматься тем, что интересно лично вам (разумеется, не обязательно забесплатно, а может в скорой перспективе и за бо́льшие деньги, чем получали раньше — только это будет вас уже мало заботить; настоящая пенсия она такая должна быть — беззаботная).</p>
 <p>А далее я приглашаю вас перестраивать мозги и учиться благоустраивать свои финансы к скорейшему переходу в это беззаботное состояние.</p>
-<script type="text/javascript"></script>
         </div>
     </article>
 </div>
@@ -165,7 +175,6 @@
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-                <a href="/pages/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
                 <a href="/literacy/notaboutmoney"> Бережливость — это не про деньги &gt;&gt; </a>
